tree-sitter-rkgk/test/corpus/common.txt

===
pre-credit, multi-line title, quoting
===

Vocal：さとうみるく
おとぎ話の
ように（作詞・作編曲：猫羽なろろ
《pomme d'amour vocal》作編曲：凪音　作詞：さとうみるく

---

(source_file
  (credit_block
    (credit_field
      (role)
      creator: (creator_name)))
  (song
    title: (song_title)
    (credit_block
      (credit_field
        (role)
        (role)
        creator: (creator_name))))
  (song
    title: (song_title)
    (credit_block
      (credit_field
        (role)
        creator: (creator_name))
      (credit_field
        (role)
        creator: (creator_name)))))

===
multiple creators, creator w/ space
===

6.
魔法なんてない世界で
Music:&Lyrics:Neko Hacker、U-ske、かめりあ

---

(source_file
  (song
    title: (song_title)
    (credit_block
      (credit_field
        (role)
        (role)
        creator: (creator_name)
	creatorSeparator: (creator_sep)
        creator: (creator_name)
	creatorSeparator: (creator_sep)
        creator: (creator_name)
	creatorSeparator: (creator_sep)
        creator: (creator_name)))))

===
title w/ separator, creator w/ space
===

5.
惑星、君を教えて
Music&Lyrics:Ryunosuke K
1.
I’m a Messenger for U
Music&Lyrics:Akki

---

(source_file
  (song
    (song_title)
    (credit_block
      (credit_field
        (role)
        (role)
        (creator_name)
	(creator_sep)
        (creator_name))))
  (song
    (song_title)
    (credit_block
      (credit_field
        (role)
        (role)
        (creator_name)))))

===
credit field newline, credit field indent, creator w/ space
===

01 絶品☆みこみこミラクル昇天レシピ！
  歌唱：MOSAIC.WAV & miko(Alternative ending)
  作詞：夕野ヨシミ(IOSYS)
  作編曲：MOSAIC.WAV

02 ガッチャ・マッワス　怒りの課金道
  歌唱：96(IOSYS)
  作詞：七条レタス(IOSYS)

---

(source_file
  (song
    (song_title)
    (credit_block
      (credit_field
        (role)
        (creator_name)
        (creator_sep)
        (creator_name)
        (creator_sep)
        (creator_name))
      (credit_field
        (role)
        (creator_name))
      (credit_field
        (role)
        (creator_name))))
  (song
    (song_title)
    (credit_block
      (credit_field
        (role)
        (creator_name))
      (credit_field
        (role)
        (creator_name)))))

===
no per-track credit
===

Vocal・test
Sleep

---

(source_file
  (credit_block
    (credit_field
      (role)
      (creator_name)))
  (song
    (song_title)))

===
feat-field, quoting
===

2	吸って、吐く（feat. 安次嶺希和子）
@
3	曖昧サイボーグ feat. うごくちゃん & JungMato
@
《1 un@ngelic.(feat. つぐ,るる)》
@

---

(source_file
  (song
    (song_title)
    (feat_field
      (feat)
      (creator_name)))
  (song
    (song_title)
    (feat_field
      (feat)
      (creator_name)
      (creator_sep)
      (creator_name)))
  (song
    (song_title)
    (feat_field
      (feat)
      (creator_name)
      (creator_sep)
      (creator_name))))

===
creator name quoting
===

01
のんねむ逃避行
music : 《ちろ:D》　lyric : もちうつね

---

(source_file
  (song
    (song_title)
    (credit_block
      (credit_field
        (role)
        (creator_name))
      (credit_field
        (role)
        (creator_name)))))

===
comment, feat-field, quoting, creator name quoting
===

01　桃色ディスタンス
    // 原曲：妖精大戦争 より 年中夢中の好奇心
@
01　桃色ディスタンス
    原曲：妖精大戦争 より 年中夢中の好奇心
@
01　桃色ディスタンス 原曲：妖精大戦争 より 年中夢中の好奇心
@
02　触れられない物語\ouo/
    // 原曲：東方永夜抄 より 竹取飛翔
    Vocal：たま
06　とある瀟洒な従者の物語 feat. ｙｔｒ // 原曲：東方紅魔郷 より 月時計－ルナ・ダイアル
    Vocal：ｙｔｒ、たま
《07　Bad >///< Apple？ feat. 《Romonosov?:p》》
    // 原曲：幺樂団の歴史1 より Bad Apple!!
    Vocal：たま

---

(source_file
  (song
    (song_title)
    (comment))
  (song
    (song_title)
    (comment))
  (song
    (song_title)
    (comment))
  (song
    (song_title)
    (comment)
    (credit_block
      (credit_field
        (role)
        (creator_name))))
  (song
    (song_title)
    (feat_field
      (feat)
      (creator_name))
    (comment)
    (credit_block
      (credit_field
        (role)
        (creator_name)
        (creator_sep)
        (creator_name))))
  (song
    (song_title)
    (feat_field
      (feat)
      (creator_name))
    (comment)
    (credit_block
      (credit_field
        (role)
        (creator_name)))))
