tree-sitter-rkgk/test/corpus/name.txt

===
instrument role annotation
===

乐器：npc
乐器-violin：npc2
乐器-drum set：npc3
曲 乐器：npc4 / 乐器-violin：npc5 / 乐器-drum set：npc6
曲2
乐器-drum set：npc7 / 乐器-violin：npc8 / 乐器：npc9

---

(source_file
  (credit_block
    (credit_field
      (role)
      creator: (creator_name))
    (credit_field
      (role)
      creator: (creator_name))
    (credit_field
      (role)
      creator: (creator_name)))
  (song
    title: (song_title)
    (credit_block
      (credit_field
        (role)
        creator: (creator_name))
      (credit_field
        (role)
        creator: (creator_name))
      (credit_field
        (role)
        creator: (creator_name))))
  (song
    title: (song_title)
    (credit_block
      (credit_field
        (role)
        creator: (creator_name))
      (credit_field
        (role)
        creator: (creator_name))
      (credit_field
        (role)
        creator: (creator_name)))))


===
instrument role annotation, comment
===

曲 // 注释
乐器-violin：npc5 / 乐器-drum set：npc6
曲2 // 注释
乐器-drum set：npc7 / 乐器-violin：npc8 / 乐器：npc9

---

(source_file
  (song
    (song_title)
    (comment)
    (credit_block
      (credit_field
        (role)
        (creator_name))
      (credit_field
        (role)
        (creator_name))))
  (song
    (song_title)
    (comment)
    (credit_block
      (credit_field
        (role)
        (creator_name))
      (credit_field
        (role)
        (creator_name))
      (credit_field
        (role)
        (creator_name)))))

===
parts
===

Compose / Jeet Singh(tr.01-04,08), Salita(Tr.06), ルシュカ (M05), Cherose(m 07)
Arrangement / pine(Tree), another (muse track), Cherose(2.7)
01.Spirit Infinity

---

(source_file
  (credit_block
    (credit_field
      (role)
      (creator_name)
      (creator_sep)
      (creator_name)
      (parts)
      (creator_sep)
      (creator_name)
      (parts)
      (creator_sep)
      (creator_name)
      (parts)
      (creator_sep)
      (creator_name)
      (parts))
    (credit_field
      (role)
      (creator_name)
      (creator_sep)
      (creator_name)
      (creator_sep)
      (creator_name)
      (creator_sep)
      (creator_name)
      (parts)))
  (song
    (song_title)))


===
character_cv, parts
===

歌唱：樋口円香 (CV. 土屋李央)、《浅倉 透》（CV.《和久井 優》）(3,4)、福丸小糸｜田嶌紗蘭、市川雛菜|岡咲美保(1)

Clock Hands
歌唱：白雪千夜(CV:関口理咲)
歌唱：浅利七海｜井上ほの花
作曲、作词、编曲：竹市佳伸

---

(source_file
  (credit_block
    (credit_field
      (role)
      (creator_name)
      (cv_conj)
      (creator_name)
      (cv_conj)
      (creator_sep)
      (creator_name)
      (cv_conj)
      (creator_name)
      (cv_conj)
      (parts)
      (creator_sep)
      (creator_name)
      (cv_conj)
      (creator_name)
      (creator_sep)
      (creator_name)
      (cv_conj)
      (creator_name)
      (parts)))
  (song
    (song_title)
    (credit_block
      (credit_field
        (role)
        (creator_name)
        (cv_conj)
        (creator_name)
        (cv_conj))
      (credit_field
        (role)
        (creator_name)
        (cv_conj)
        (creator_name))
      (credit_field
        (role)
        (role)
        (role)
        (creator_name)))))

